--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGO = "mongodb+srv://ilef:blogApp@cluster0.eqc1u33.mongodb.net/test?retryWrites=true&w=majority"
+
+GOOGLE_CLIENT_ID =896435707036-6g9g1edhmdigmfrq96a93i2blr03dj96.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
+NEXTAUTH_SECRET= "secret"   
+NEXTAUTH_URL= "http://localhost:3000"
