--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "auth": "^0.0.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.0.0",
     "mongoose": "^6.11.1",
     "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.2.2"
