--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ GOOGLE_CLIENT_SECRET = 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
 
 NEXTAUTH_SECRET= "secret"   
 NEXTAUTH_URL= "http://localhost:3000"
+
+API_URL= "http://localhost:3000"
+
